# spruce-v3

./: .editorconfig  .gitignore  README.md  conda_environment.yml
scripts/: feed_masking_server.sh  jobstats.py  n_longest.sh  run_wtdbg2.sh
scripts/python/: jobstats.py
scripts/sh/: axolotl_sra2fasta.sh  bam_to_fa.sh  build_index.sh  download_axolotl_data.sh  offload_copy.sh  seq_lengths.sh
src/contaminant_filter/: Makefile  contaminant_filter  contaminant_filter.cpp
src/faidx_ops/: CMakeLists.txt  Makefile  README  build_index.cpp  index.cpp  index.h  longest_x  longest_x.cpp  print_index.cpp  sort_index.cpp  tg  tg.cpp
src/marvel_graph/: README.md  contigs.sh  create_graph.sh  tour_graph.sh
src/marvelous_jobs/: README  README.md  marvelous_jobs.py  setup.py
src/marvelous_jobs/marvelous_jobs/: __init__.py  __main__.py  config.py  database.py  job.py  slurm_utils.py
src/marvelous_jobs/marvelous_jobs/tests/: __init__.py  test_daligner_array.py  test_daligner_job.py  test_db.py  test_marvel_job.py  test_masking_server.py  test_prepare_job.py
src/post_alignment/: README.md  all_steps.sh  annotate.sh  annotate_update.sh  filter.sh  gap_submit.sh  gaps.sh  stitch.sh  trim_track.sh
src/stream_longest/: Makefile  main.cpp
src/subread_stats/: subread_stats.py  test_reads.fasta  test_reads.txt  tests.py
